Bug 479591 - Help link fails to open on config dialog
Summary: Help link fails to open on config dialog
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-10 02:33 UTC by Robby Stephenson
Modified: 2024-01-13 16:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2024-01-10 02:33:56 UTC
Settings -> Configure tellico -> Help.

Result: Help Center opened with the error "The file general-options.html could not be found in /usr/share/kf5/doc/HTML/en//tellico/general-options.html." See screen attachment.

Expected result: help opened, without errors.
Comment 1 Robby Stephenson 2024-01-10 02:51:06 UTC
Git commit 51a541f20336dabca68e1d601ef0feeffba10fef by Robby Stephenson.
Committed on 10/01/2024 at 03:50.
Pushed by rstephenson into branch '3.5'.

Use correct help link for config dialog anchors
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +4    -4    src/configdialog.cpp

https://invent.kde.org/office/tellico/-/commit/51a541f20336dabca68e1d601ef0feeffba10fef
Comment 2 Robby Stephenson 2024-01-13 16:32:27 UTC
Git commit 92e21676bcd6bff80af713874e84db7be16d680d by Robby Stephenson.
Committed on 13/01/2024 at 17:32.
Pushed by rstephenson into branch 'master'.

Use correct help link for config dialog anchors
FIXED-IN: 3.5.4

M  +4    -0    ChangeLog
M  +4    -4    src/configdialog.cpp

https://invent.kde.org/office/tellico/-/commit/92e21676bcd6bff80af713874e84db7be16d680d