Use correct help link for config dialog anchors

BUG: 479591
FIXED-IN: 3.5.4